add variable values #233